# pip-binary-factory

./: .gitignore  .gitmodules  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build.yml  build_act.yml  build_brush.yml  build_caddyserver.yml  build_eget.yml  build_fzf.yml  build_jaq.yml  build_juicefs.yml  build_lazygit.yml  build_micro.yml  build_nats-server.yml  build_pocketbase.yml  build_ripgrep.yml  build_rustup-init.yml  build_seaweedfs.yml  build_task.yml  build_xh.yml  build_yazi.yml  build_zig.yml
act/: LICENSE  README.md  build_wheel.py  download.nu  go.mod  go.sum  pdm_build.py  pyproject.toml
brush/: README.md  pyproject.toml
caddyserver/: README.md  pdm_build.py  pyproject.toml
eget/: LICENSE  build_wheel.py  pdm_build.py  pyproject.toml
eget-py/: README.md  pdm_build.py  pyproject.toml
eget-py/eget/: __init__.py  __main__.py
fzf/: README.md  build_wheel.py  pdm_build.py  pyproject.toml
jaq/: LICENSE  README.md  pyproject.toml
juicefs/: LICENSE  README.md  pdm_build.py  pyproject.toml
lazygit/: README.md  build_wheel.py  pdm_build.py  pyproject.toml
lazygit/lazygit_py/: __main__.py
micro/: README.md  build_wheel.py  pdm_build.py  pyproject.toml
nats-server/: README.md  build_wheel.py  pdm_build.py  pyproject.toml
pocketbase/: LICENSE  README.md  build_wheel.py  download.nu  fix.go  go.mod  go.sum  main.go  pdm_build.py  pyproject.toml
ripgrep/: README.md  pyproject.toml
rustup-init/: LICENSE-APACHE  README.md  pyproject.toml
seaweedfs/: README.md  build_wheel.py  pdm_build.py  pyproject.toml
task/: README.md  build_wheel.py  pdm_build.py  pyproject.toml
xh/: README.md  pyproject.toml
yazi/: LICENSE  README.md  pdm_build.py  pyproject.toml
zig/: LICENSE  README.md  pdm_build.py  pyproject.toml  zig.py
