[project]
name = "act-bin"
version = "0.2.82"
description = "Run your GitHub Actions locally 🚀"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
authors = [{ name = "dowon", email = "ks2515@naver.com" }]
keywords = ["act", "actions", "github"]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Go",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Software Development :: Testing",
]
dependencies = []

[project.urls]
act = "https://nektosact.com"
repository = "https://github.com/Bing-su/pip-binary-factory"

[build-system]
requires = ["pdm-backend", "tomli; python_version < '3.11'"]
build-backend = "pdm.backend"

[tool.pdm.build]
is-purelib = false
source-includes = ["*.go", "go.mod", "go.sum"]
excludes = ["bin/*", ".gitignore", "*.py"]

[tool.pdm.build.wheel-data]
scripts = ["${BUILD_DIR}/bin/*"]

[tool.ruff.lint]
select = [
  "A",
  "B",
  "C4",
  "C90",
  "E",
  "EM",
  "F",
  "FA",
  "FBT",
  "FURB",
  "I001",
  "ISC",
  "N",
  "PD",
  "PERF",
  "PIE",
  "PL",
  "PT",
  "PTH",
  "RET",
  "RUF",
  "S",
  "SIM",
  "T20",
  "TRY",
  "UP",
  "W",
]
ignore = ["B905", "E501"]
unfixable = ["F401"]
