[project]
name = "caddyserver-bin"
description = "Fast and extensible multi-platform HTTP/1-2-3 web server with automatic HTTPS "
version = "2.10.0"
authors = [{ name = "dowon", email = "ks2515@naver.com" }]
dependencies = []
requires-python = ">=3.7"
readme = "README.md"
license.text = "Apache-2.0"
keywords = ["caddy", "web server", "http", "https", "http3"]
classifiers = [
    "Programming Language :: Go",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]

[project.urls]
repository = "https://github.com/Bing-su/pip-binary-factory"
caddy = "https://caddyserver.com/"
documentation = "https://caddyserver.com/docs/"

[build-system]
requires = ["pdm-backend", "tomli; python_version < '3.11'", "eget-py"]
build-backend = "pdm.backend"

[tool.pdm.build]
is-purelib = false
excludes = ["bin/*", ".gitignore", "*.py"]

[tool.pdm.build.wheel-data]
scripts = ["${BUILD_DIR}/bin/*"]

[tool.ruff]
select = [
    "A",
    "B",
    "C4",
    "C90",
    "E",
    "EM",
    "F",
    "FA",
    "I001",
    "ISC",
    "N",
    "PIE",
    "PT",
    "RET",
    "RUF",
    "SIM",
    "UP",
    "W",
]
ignore = ["B008", "B905", "E501"]
unfixable = ["F401"]
