[project]
name = "eget-py"
description = "zyedidia/eget wrapper for python"
version = "1.3.4"
authors = [{ name = "dowon", email = "ks2515@naver.com" }]
readme = "README.md"
requires-python = ">=3.8"
keywords = ["eget", "github"]
classifiers = [
    "Programming Language :: Other",
    "Topic :: System :: Installation/Setup",
]

[project.urls]
repository = "https://github.com/Bing-su/pip-binary-factory"
eget = "https://github.com/zyedidia/eget"

[build-system]
requires = ["pdm-backend", "wheel"]
build-backend = "pdm.backend"

[tool.pdm.build]
is-purelib = false
source-includes = ["eget/"]
excludes = ["bin/*", ".gitignore"]

[tool.pdm.build.wheel-data]
scripts = ["${BUILD_DIR}/bin/*"]

[tool.ruff]
select = [
    "A",
    "B",
    "C4",
    "C90",
    "E",
    "EM",
    "F",
    "FA",
    "I001",
    "ISC",
    "N",
    "PIE",
    "PT",
    "RET",
    "RUF",
    "SIM",
    "UP",
    "W",
]
ignore = ["B008", "B905", "E501"]
unfixable = ["F401"]
