[project]
name = "fzf-bin"
version = "0.68.0"
description = "fzf - 🌸 A command-line fuzzy finder"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
authors = [{ name = "dowon", email = "ks2515@naver.com" }]
keywords = ["fuzzy finder", "fzf", "tui"]
classifiers = [
  "Programming Language :: Go",
  "Topic :: Software Development :: User Interfaces",
  "Topic :: Terminals",
]
dependencies = []

[project.urls]
repository = "https://github.com/Bing-su/pip-binary-factory"

[build-system]
requires = ["pdm-backend", "tomli; python_version < '3.11'"]
build-backend = "pdm.backend"

[tool.pdm.build]
is-purelib = false
source-includes = ["fzf/"]
excludes = ["bin/*", ".gitignore", "*.py"]

[tool.pdm.build.wheel-data]
scripts = ["${BUILD_DIR}/bin/*"]

[tool.ruff.lint]
select = [
  "A",
  "B",
  "C4",
  "C90",
  "E",
  "EM",
  "F",
  "FA",
  "I001",
  "ISC",
  "N",
  "PIE",
  "PT",
  "RET",
  "RUF",
  "SIM",
  "UP",
  "W",
]
ignore = ["B008", "B905", "E501"]
unfixable = ["F401"]
