[project]
name = "jaq-bin"
version = "3.0.0-beta"
description = "A jq clone focused on correctness, speed, and simplicity"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
authors = [{ name = "dowon", email = "ks2515@naver.com" }]
keywords = ["cbor", "jaq", "jq", "json", "toml", "xml", "yaml"]
classifiers = [
  "Programming Language :: Rust",
  "Topic :: File Formats :: JSON",
  "Topic :: Text Processing",
  "Topic :: Utilities",
]
dependencies = []

[project.urls]
jaq = "https://github.com/01mf02/jaq"
repository = "https://github.com/Bing-su/pip-binary-factory"

[build-system]
requires = ["maturin>=1.10,<2.0"]
build-backend = "maturin"

[tool.maturin]
auditwheel = "repair"
bindings = "bin"
include = [{ format = "sdist", path = "LICENSE" }]
manifest-path = "jaq/jaq/Cargo.toml"
profile = "release"
strip = true

[tool.ruff.lint]
select = [
  "A",
  "B",
  "C4",
  "C90",
  "E",
  "EM",
  "F",
  "FA",
  "I001",
  "ISC",
  "N",
  "PIE",
  "PT",
  "RET",
  "RUF",
  "SIM",
  "UP",
  "W",
]
ignore = ["B008", "B905", "E501"]
unfixable = ["F401"]
