[project]
name = "juicefs-bin"
version = "1.3.0"
description = "ðŸ¹JuiceFS is a distributed POSIX file system built on top of Redis and S3."
readme = "README.md"
requires-python = ">=3.7"
license = { text = "Apache 2.0" }
authors = [{ name = "dowon", email = "ks2515@naver.com" }]
keywords = [
  "distributed file system",
  "distributed storage",
  "filesystem",
  "hdfs",
  "juicefs",
  "object storage",
  "posix",
  "redis",
  "s3",
]
classifiers = ["Programming Language :: Go", "Topic :: System :: Filesystems"]
dependencies = []

[project.urls]
juicefs = "https://github.com/juicedata/juicefs"
repository = "https://github.com/Bing-su/pip-binary-factory"

[build-system]
requires = ["pdm-backend", "tomli; python_version < '3.11'"]
build-backend = "pdm.backend"

[tool.pdm.build]
is-purelib = false
source-includes = ["juicefs/"]
excludes = ["bin/*", ".gitignore", "*.py"]

[tool.pdm.build.wheel-data]
scripts = ["${BUILD_DIR}/bin/*"]

[tool.ruff.lint]
select = [
  "A",
  "B",
  "C4",
  "C90",
  "E",
  "EM",
  "F",
  "FA",
  "I001",
  "ISC",
  "N",
  "PIE",
  "PT",
  "RET",
  "RUF",
  "SIM",
  "UP",
  "W",
]
ignore = ["B008", "B905", "E501"]
unfixable = ["F401"]
