[project]
name = "lazygit-py"
description = "lazygit - simple terminal UI for git commands"
version = "0.42.0"
authors = [{ name = "dowon", email = "ks2515@naver.com" }]
dependencies = []
requires-python = ">=3.8"
readme = "README.md"
license = { text = "MIT" }
keywords = ["git", "tui"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Version Control :: Git",
]

[project.urls]
repository = "https://github.com/Bing-su/pip-binary-factory"
lazygit = "https://github.com/jesseduffield/lazygit"

[build-system]
requires = ["pdm-backend", "wheel"]
build-backend = "pdm.backend"

[tool.pdm.build]
is-purelib = false
source-includes = ["lazygit/"]
excludes = ["bin/*", ".gitignore"]

[tool.pdm.build.wheel-data]
scripts = ["${BUILD_DIR}/bin/*"]

[tool.ruff]
select = [
    "A",
    "B",
    "C4",
    "C90",
    "E",
    "EM",
    "F",
    "FA",
    "I001",
    "ISC",
    "N",
    "PIE",
    "PT",
    "RET",
    "RUF",
    "SIM",
    "UP",
    "W",
]
ignore = ["B008", "B905", "E501"]
unfixable = ["F401"]
