[project]
name = "micro-editor"
description = "python wrapper for terminal-based text editor 'micro'"
version = "2.0.12.post0"
authors = [{ name = "dowon", email = "ks2515@naver.com" }]
dependencies = []
requires-python = ">=3.8"
readme = "README.md"
license = { text = "MIT" }
keywords = ["micro", "text editor"]
classifiers = ["Programming Language :: Python :: 3", "Topic :: Text Editors"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.build]
is-purelib = false
source-includes = ["micro/"]
excludes = ["bin/*", ".gitignore"]

[tool.pdm.build.wheel-data]
scripts = ["${BUILD_DIR}/bin/*"]

[tool.ruff]
select = [
    "A",
    "B",
    "C4",
    "C90",
    "E",
    "EM",
    "F",
    "FA",
    "I001",
    "ISC",
    "N",
    "PIE",
    "PT",
    "RET",
    "RUF",
    "SIM",
    "UP",
    "W",
]
ignore = ["B008", "B905", "E501"]
unfixable = ["F401"]
