[project]
name = "micro-editor"
description = "python wrapper for terminal-based text editor 'micro'"
version = "2.0.14"
authors = [{ name = "dowon", email = "ks2515@naver.com" }]
dependencies = []
requires-python = ">=3.8"
readme = "README.md"
license = { text = "MIT" }
keywords = ["micro", "text editor"]
classifiers = [
    "Programming Language :: Go",
    "Topic :: Text Editors",
    "Topic :: Terminals",
]

[project.urls]
repository = "https://github.com/Bing-su/pip-binary-factory"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.build]
is-purelib = false
source-includes = ["micro/"]
excludes = ["bin/*", ".gitignore", "*.py"]

[tool.pdm.build.wheel-data]
scripts = ["${BUILD_DIR}/bin/*"]

[tool.ruff]
select = [
    "A",
    "B",
    "C4",
    "C90",
    "E",
    "EM",
    "F",
    "FA",
    "I001",
    "ISC",
    "N",
    "PIE",
    "PT",
    "RET",
    "RUF",
    "SIM",
    "UP",
    "W",
]
ignore = ["B008", "B905", "E501"]
unfixable = ["F401"]
