[project]
name = "nats-server-bin"
version = "2.12.1"
description = "High-Performance server for NATS.io, the cloud and edge native messaging system."
readme = "README.md"
requires-python = ">=3.7"
license = { text = "Apache-2.0" }
authors = [{ name = "dowon", email = "ks2515@naver.com" }]
keywords = ["messaging", "nats", "queue"]
classifiers = ["Programming Language :: Go", "Topic :: System :: Networking"]
dependencies = []

[project.urls]
"nats.io" = "https://nats.io/"
repository = "https://github.com/Bing-su/pip-binary-factory"

[build-system]
requires = ["pdm-backend", "tomli; python_version < '3.11'"]
build-backend = "pdm.backend"

[tool.pdm.build]
is-purelib = false
source-includes = ["nats-server/"]
excludes = ["bin/*", ".gitignore", "*.py"]

[tool.pdm.build.wheel-data]
scripts = ["${BUILD_DIR}/bin/*"]

[tool.ruff.lint]
select = [
  "A",
  "B",
  "C4",
  "C90",
  "E",
  "EM",
  "F",
  "FA",
  "I001",
  "ISC",
  "N",
  "PIE",
  "PT",
  "RET",
  "RUF",
  "SIM",
  "UP",
  "W",
]
ignore = ["B008", "B905", "E501"]
unfixable = ["F401"]
