[project]
name = "pocketbase-bin"
version = "0.33.0"
description = "Open Source realtime backend in 1 file"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
authors = [{ name = "dowon", email = "ks2515@naver.com" }]
keywords = ["admin", "backend", "golang"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Go",
  "Topic :: Database",
]
dependencies = []

[project.urls]
pocketbase = "https://pocketbase.io"
repository = "https://github.com/Bing-su/pip-binary-factory"

[build-system]
requires = ["pdm-backend", "tomli; python_version < '3.11'"]
build-backend = "pdm.backend"

[tool.pdm.build]
is-purelib = false
source-includes = ["go.mod", "go.sum", "*.go", "download.nu"]
excludes = ["bin/*", ".gitignore", "pdm_build.py", "build_wheel.py"]

[tool.pdm.build.wheel-data]
scripts = ["${BUILD_DIR}/bin/*"]

[tool.ruff.lint]
select = [
  "A",
  "B",
  "C4",
  "C90",
  "E",
  "EM",
  "F",
  "FA",
  "FBT",
  "FURB",
  "I001",
  "ISC",
  "N",
  "PD",
  "PERF",
  "PIE",
  "PL",
  "PT",
  "PTH",
  "RET",
  "RUF",
  "S",
  "SIM",
  "T20",
  "TRY",
  "UP",
  "W",
]
ignore = ["B905", "E501"]
unfixable = ["F401"]
