[project]
name = "ripgrep-bin"
readme = "README.md"
requires-python = ">=3.7"
authors = [{ name = "dowon", email = "ks2515@naver.com" }]
classifiers = [
  "Programming Language :: Rust",
  "Topic :: Terminals",
  "Topic :: Text Processing",
  "Topic :: Text Processing :: Filters"
]
dependencies = []
dynamic = ["description", "keywords", "license", "version"]

[project.urls]
repository = "https://github.com/Bing-su/pip-binary-factory"
ripgrep = "https://github.com/BurntSushi/ripgrep"

[build-system]
requires = ["maturin>=1.13,<2.0"]
build-backend = "maturin"

[tool.maturin]
auditwheel = "repair"
bindings = "bin"
features = ["pcre2"]
include = [{ format = "sdist", path = "*LICENSE*" }]
manifest-path = "ripgrep/Cargo.toml"
profile = "release-lto"
strip = true

[tool.ruff.lint]
select = [
  "A",
  "B",
  "C4",
  "C90",
  "E",
  "EM",
  "F",
  "FA",
  "I001",
  "ISC",
  "N",
  "PIE",
  "PT",
  "RET",
  "RUF",
  "SIM",
  "UP",
  "W",
]
ignore = ["B008", "B905", "E501"]
unfixable = ["F401"]
