[project]
name = "rustup-init-bin"
version = "1.28.2"
description = "The Rust toolchain installer"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT OR Apache-2.0"
authors = [{ name = "dowon", email = "ks2515@naver.com" }]
keywords = ["rust", "rustup"]
classifiers = [
  "Programming Language :: Rust",
  "Topic :: System :: Installation/Setup",
  "Topic :: Utilities",
]
dependencies = []

[project.urls]
repository = "https://github.com/Bing-su/pip-binary-factory"
rustup = "https://github.com/rust-lang/rustup"

[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[tool.maturin]
auditwheel = "repair"
bindings = "bin"
include = [{ format = "sdist", path = "LICENSE-*" }]
manifest-path = "rustup/Cargo.toml"
profile = "release"
strip = true

[tool.ruff.lint]
select = [
  "A",
  "B",
  "C4",
  "C90",
  "E",
  "EM",
  "F",
  "FA",
  "I001",
  "ISC",
  "N",
  "PIE",
  "PT",
  "RET",
  "RUF",
  "SIM",
  "UP",
  "W",
]
ignore = ["B008", "B905", "E501"]
unfixable = ["F401"]
