[project]
name = "seaweedfs-bin"
version = "4.04"
description = "🌿SeaweedFS is a fast distributed storage system for blobs, objects, files, and data lake, for billions of files! Blob store has O(1) disk seek, cloud tiering."
readme = "README.md"
requires-python = ">=3.7"
license = { text = "Apache 2.0" }
authors = [{ name = "dowon", email = "ks2515@naver.com" }]
keywords = [
  "blob storage",
  "data lake",
  "distributed file system",
  "distributed storage",
  "erasure coding",
  "file system",
  "object storage",
  "s3",
  "seaweedfs",
]
classifiers = ["Programming Language :: Go", "Topic :: System :: Filesystems"]
dependencies = []

[project.urls]
repository = "https://github.com/Bing-su/pip-binary-factory"
seaweedfs = "https://github.com/seaweedfs/seaweedfs"

[build-system]
requires = ["pdm-backend", "tomli; python_version < '3.11'"]
build-backend = "pdm.backend"

[tool.pdm.build]
is-purelib = false
source-includes = ["seaweedfs/"]
excludes = ["bin/*", ".gitignore", "*.py"]

[tool.pdm.build.wheel-data]
scripts = ["${BUILD_DIR}/bin/*"]

[tool.ruff.lint]
select = [
  "A",
  "B",
  "C4",
  "C90",
  "E",
  "EM",
  "F",
  "FA",
  "I001",
  "ISC",
  "N",
  "PIE",
  "PT",
  "RET",
  "RUF",
  "SIM",
  "UP",
  "W",
]
ignore = ["B008", "B905", "E501"]
unfixable = ["F401"]
