[project]
name = "go-task-bin"
version = "3.48.0"
description = "A task runner / simpler Make alternative written in Go"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
authors = [{ name = "dowon", email = "ks2515@naver.com" }]
keywords = [
  "build",
  "build-tool",
  "devops",
  "go",
  "make",
  "makefile",
  "runner",
  "task",
  "task-runner",
  "taskfile",
  "tool",
]
classifiers = [
  "Programming Language :: Go",
  "Topic :: Software Development :: Build Tools",
]
dependencies = []

[project.urls]
repository = "https://github.com/Bing-su/pip-binary-factory"
taskfile = "https://taskfile.dev"

[build-system]
requires = ["pdm-backend", "tomli; python_version < '3.11'"]
build-backend = "pdm.backend"

[tool.pdm.build]
is-purelib = false
source-includes = ["task/"]
excludes = ["bin/*", ".gitignore", "*.py"]

[tool.pdm.build.wheel-data]
scripts = ["${BUILD_DIR}/bin/*"]

[tool.ruff.lint]
select = [
  "A",
  "B",
  "C4",
  "C90",
  "E",
  "EM",
  "F",
  "FA",
  "I001",
  "ISC",
  "N",
  "PIE",
  "PT",
  "RET",
  "RUF",
  "SIM",
  "UP",
  "W",
]
ignore = ["B008", "B905", "E501"]
unfixable = ["F401"]
