[project]
name = "xh-bin"
description = "Friendly and fast tool for sending HTTP requests "
version = "0.24.1"
authors = [{ name = "dowon", email = "ks2515@naver.com" }]
dependencies = []
requires-python = ">=3.7"
readme = "README.md"
license = { text = "MIT" }
keywords = [
    "cli",
    "http-client",
    "api-testing",
]
classifiers = [
    "Programming Language :: Rust",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: System :: Networking",
    "Topic :: Utilities",
]

[project.urls]
repository = "https://github.com/Bing-su/pip-binary-factory"
xh = "https://github.com/ducaale/xh"

[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[tool.maturin]
bindings = "bin"
manifest-path = "xh/Cargo.toml"
auditwheel = "repair"
strip = true

[tool.ruff]
select = [
    "A",
    "B",
    "C4",
    "C90",
    "E",
    "EM",
    "F",
    "FA",
    "I001",
    "ISC",
    "N",
    "PIE",
    "PT",
    "RET",
    "RUF",
    "SIM",
    "UP",
    "W",
]
ignore = ["B008", "B905", "E501"]
unfixable = ["F401"]
