[project]
name = "xh-bin"
version = "0.25.0"
description = "Friendly and fast tool for sending HTTP requests "
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
authors = [{ name = "dowon", email = "ks2515@naver.com" }]
keywords = ["api-testing", "cli", "http-client"]
classifiers = [
  "Programming Language :: Rust",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: System :: Networking",
  "Topic :: Utilities",
]
dependencies = []

[project.urls]
repository = "https://github.com/Bing-su/pip-binary-factory"
xh = "https://github.com/ducaale/xh"

[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[tool.maturin]
auditwheel = "repair"
bindings = "bin"
include = [{ format = "sdist", path = "LICENSE" }]
manifest-path = "xh/Cargo.toml"
strip = true

[tool.ruff.lint]
select = [
  "A",
  "B",
  "C4",
  "C90",
  "E",
  "EM",
  "F",
  "FA",
  "I001",
  "ISC",
  "N",
  "PIE",
  "PT",
  "RET",
  "RUF",
  "SIM",
  "UP",
  "W",
]
ignore = ["B008", "B905", "E501"]
unfixable = ["F401"]
