[project]
name = "yazi-bin"
version = "26.1.4"
description = "💥 Blazing fast terminal file manager written in Rust, based on async I/O."
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
authors = [{ name = "dowon", email = "ks2515@naver.com" }]
keywords = [
  "file-manager",
  "terminal",
  "terminal-file-manager",
  "tui",
]
classifiers = [
  "Programming Language :: Rust",
  "Topic :: Desktop Environment :: File Managers",
  "Topic :: Terminals",
]
dependencies = []

[project.urls]
repository = "https://github.com/Bing-su/pip-binary-factory"
yazi = "https://github.com/sxyazi/yazi"

[build-system]
requires = ["pdm-backend", "tomli; python_version < '3.11'"]
build-backend = "pdm.backend"

[tool.pdm.build]
is-purelib = false
source-includes = ["yazi/"]
excludes = ["bin/*", ".gitignore", "*.py"]

[tool.pdm.build.wheel-data]
scripts = ["${BUILD_DIR}/bin/*"]

[tool.ruff.lint]
select = [
  "A",
  "B",
  "C4",
  "C90",
  "E",
  "EM",
  "F",
  "FA",
  "I001",
  "ISC",
  "N",
  "PIE",
  "PT",
  "RET",
  "RUF",
  "SIM",
  "UP",
  "W",
]
ignore = ["B008", "B905", "E501"]
unfixable = ["F401"]
